# evict-icloud

./: Cargo.toml  README.md
src/: main.rs
