[package]
name = "evict-icloud"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Concurrent CLI to evict downloaded iCloud files via brctl evict"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.4"
rayon = "1.8"
num_cpus = "1.16"
ctrlc = "3.4" 